# bevy_snake

./: .gitignore  Cargo.toml  README.md  bevy_snake-22e2fd493be00c32.js  bevy_snake-28e146e801a89e66.js  bevy_snake-2e3b8828a52b997.js  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: pages.yaml
src/: camera.rs  common.rs  debug.rs  level.rs  main.rs  player.rs
