[package]
name = "bevy_snake"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_math = "0.14"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
